fix: Add gap for SelectColumns, Filter and Export elements in a data table

--- a/apps/upd/src/css/upd-custom.css
+++ b/apps/upd/src/css/upd-custom.css
@@ -548,9 +548,9 @@ margin: 0px 20px 0px 20px;
   color: rgb(33, 37, 41);
 }
 
-.p-treeselect {
+/* .p-treeselect {
   margin: 0 10px;
-}
+} */
 
 .p-tree-root-children {
   margin-left: 0px;
